# coresoftware

./: .clang-format  .clang-tidy  .coderabbit.yaml  .gitignore  Fun4All_G4_Readback.C  Fun4All_KFParticle_advanced.C  Fun4All_KFParticle_basic.C  Fun4All_KFParticle_loop.C  Fun4All_KFParticle_standardContainers.C  README.md  fileList_MDC.txt  fileList_bs2jpsiphi.txt  fileList_d2kpi.txt  find.md  test.cc  transform.C
GenFitExp/: Makefile.am  configure.in
GenFitExp/fields/: Field2D.cc  Field2D.h
calibrations/calorimeter/calo_cdb/: CaloCDB-FilterDatasets.cc  CaloCDB-GenStatus.cc  FilterDatasets.cc  FilterDatasets.h  GenStatus.cc  GenStatus.h  Makefile.am  configure.ac  filter-datasets.cc  filter-datasets.h  genStatus.cc  genStatus.h  geometry_constants.h  myUtils.cc  myUtils.h
calibrations/calorimeter/calo_emc_noisy_tower/: Makefile.am  configure.ac  emcNoisyTowerFinder.cc  emcNoisyTowerFinder.h
calibrations/calorimeter/calo_emc_pi0_tbt/: CaloCalibEmc_Pi0.cc  CaloCalibEmc_Pi0.h  Makefile.am  README.md  configure.ac  pi0EtaByEta.cc  pi0EtaByEta.h
calibrations/calorimeter/dbfile_accessor_calo/: CEmcCaloCalibSimpleCorrFilev1.cc  CEmcCaloCalibSimpleCorrFilev1.h  CaloCalibSimpleCorrFile.h  HcalCaloCalibSimpleCorrFilev1.cc  HcalCaloCalibSimpleCorrFilev1.h  Makefile.am  README.md  configure.ac
calibrations/tpc/TpcDVCalib/: Makefile.am  README.md  TrackToCalo.cc  TrackToCalo.h  configure.ac
calibrations/tpc/dEdx/: GlobaldEdxFitter.cc  GlobaldEdxFitter.h  Makefile.am  bethe_bloch.h  configure.ac  dEdxFitter.cc  dEdxFitter.h  test_sample_size.C
calibrations/tpc/generator/: AnalyticFieldModel.cc  AnalyticFieldModel.h  AnalyticFieldModelLinkDef.h  AnnularFieldSim.cc  AnnularFieldSim.h  AnnularFieldSimLinkdef.h  ChargeMapReader.cc  ChargeMapReader.h  Makefile.am  MultiArray.h  README  (+13 more)
generators/JETSCAPE/: Makefile.am  configure.ac
generators/JEWEL/: Makefile.am  README  configure.ac  jewel-2.2.0.f  medium-simple.f  medium-vac.f  meix.f  pythia6425mod.f
generators/PHPythia6/: Makefile.am  PHPy6ForwardDiElectronTrig.C  PHPy6ForwardDiElectronTrig.h  PHPy6ForwardElectronTrig.C  PHPy6ForwardElectronTrig.cc  PHPy6ForwardElectronTrig.h  PHPy6ForwardElectronTrigLinkDef.h  PHPy6GenTrigger.C  PHPy6GenTrigger.cc  PHPy6GenTrigger.h  PHPy6GenTriggerLinkDef.h  PHPy6JetTrigger.C  PHPy6JetTrigger.cc  PHPy6JetTrigger.h  PHPy6JetTriggerLinkDef.h  PHPy6ParticleTrigger.C  PHPy6ParticleTrigger.cc  PHPy6ParticleTrigger.h  PHPy6ParticleTriggerLinkDef.h  PHPythia.C  PHPythia6.C  PHPythia6.cc  PHPythia6.h  PHPythia6LinkDef.h  configure.ac  configure.in  phpythia6.cfg  phpythia6_ep.cfg
generators/PHPythia8/: Makefile.am  PHPy8FwdJetTrigger.C  PHPy8FwdJetTrigger.h  PHPy8GenTrigger.C  PHPy8GenTrigger.cc  PHPy8GenTrigger.h  PHPy8GenTriggerLinkDef.h  PHPy8JetTrigger.C  PHPy8JetTrigger.cc  PHPy8JetTrigger.h  PHPy8JetTriggerLinkDef.h  PHPy8ParticleTrigger.C  PHPy8ParticleTrigger.cc  PHPy8ParticleTrigger.h  PHPy8ParticleTriggerLinkDef.h  PHPythia8.C  PHPythia8.cc  PHPythia8.h  PHPythia8LinkDef.h  PHPythia8_hp.cc  PHPythia8_hp.h  PHPythia8_hpLinkDef.h  README  configure.ac  configure.in  phpythia8.cfg  phpythia8_detroitUE.cfg  phpythia8_mb.cfg
generators/PHSartre/: Makefile.am  PHSartre.C  PHSartre.cc  PHSartre.h  PHSartreGenTrigger.C  PHSartreGenTrigger.cc  PHSartreGenTrigger.h  PHSartreGenTriggerLinkDef.h  PHSartreLinkDef.h  PHSartreParticleTrigger.C  PHSartreParticleTrigger.cc  PHSartreParticleTrigger.h  PHSartreParticleTriggerLinkDef.h  README  configure.ac  sartre.cfg  sartreRuncard_pAu_Au_emits.txt
generators/flowAfterburner/: AfterburnerAlgo.cc  AfterburnerAlgo.h  Makefile.am  configure.ac  flowAfterburner.cc  flowAfterburner.h  foreach.cc  main.cc  test.cc
generators/hijing/: Makefile.am  README  configure.ac
generators/phhepmc/: Fun4AllHepMCInputManager.cc  Fun4AllHepMCInputManager.h  Fun4AllHepMCInputManagerLinkDef.h  Fun4AllHepMCOutputManager.cc  Fun4AllHepMCOutputManager.h  Fun4AllHepMCOutputManagerLinkDef.h  Fun4AllHepMCPileupInputManager.cc  Fun4AllHepMCPileupInputManager.h  Fun4AllHepMCPileupInputManagerLinkDef.h  Fun4AllOscarInputManager.cc  Fun4AllOscarInputManager.h  Fun4AllOscarInputManagerLinkDef.h  HepMCFlowAfterBurner.C  HepMCFlowAfterBurner.cc  HepMCFlowAfterBurner.h  HepMCFlowAfterBurnerLinkDef.h  Makefile.am  PHGenEvent.cc  PHGenEvent.h  PHGenEventLinkDef.h  PHGenEventList.h  PHGenEventListLinkDef.h  PHGenEventListv1.cc  PHGenEventListv1.h  PHGenEventListv1LinkDef.h  PHGenEventv1.cc  PHGenEventv1.h  PHGenEventv1LinkDef.h  PHGenIntegral.cc  PHGenIntegral.h  PHGenIntegralLinkDef.h  PHGenIntegralv1.cc  PHGenIntegralv1.h  PHGenIntegralv1LinkDef.h  PHHepMCDefs.h  PHHepMCGenEvent.cc  PHHepMCGenEvent.h  PHHepMCGenEventLinkDef.h  PHHepMCGenEventMap.cc  PHHepMCGenEventMap.h  (+13 more)
generators/sHEPGen/: Makefile.am  configure.ac  configure.in  sHEPGen.C  sHEPGen.h  sHEPGenLinkDef.h
generators/sHijing/: HiMain1.h  HiMain2.h  HiParnt.h  HiStrng.h  HijCrdn.h  HijJet1.h  HijJet2.h  HijJet4.h  Hijing.cxx  Makefile.am  RanSeed.h  autogen.sh  configure.ac  getaddr.cxx  ghijcrdn.F  ghijjet1.F  ghijjet2.F  ghijjet4.F  ghimain1.F  ghimain2.F  ghiparnt.F  ghistrng.F  granseed.F  sHijing.xml  xml_test.C  xml_test.cc
generators/sphstarlight/: Makefile.am  StarLight_To_HepMc.cc  autogen.sh  configure.ac
online_distribution/newbasic/: A_Event.cc  A_Event.h  BoolDefs.h  BufferConstants.h  Cframe.C  Cframe.h  CframeV1.C  CframeV1.h  Cpacket.C  Cpacket.h  CpacketV1.C  CpacketV1.h  Event.h  EventTypes.h  Eventiterator.h  EvtConstants.h  EvtStructures.h  Makefile.am  PHmd5Utils.cc  PHmd5Utils.h  PHmd5Value.cc  PHmd5Value.h  all.h  autogen.sh  buffer.cc  buffer.h  changehitformat.cc  changeid.cc  configure.in  dataBlock.C  dataBlock.h  dataBlockHdr.h  dataBlockPublic.h  date_filter_msg_buffer.cc  date_filter_msg_buffer.h  ddump.cc  decoding_routines.cc  decoding_routines.h  devicedefs.h  dlist.cc  (+200 more)
online_distribution/pmonitor/: Makefile.am  autogen.sh  configure.in  pMutex.cc  pMutex.h  pmondisplay.h  pmongui.cc  pmongui.h  pmonitor.cc  pmonitor.h  pmonitorLinkDef.h  pmonstate.h  writePmonProject.pl
(+5486 files in other folders)
