AUTOMAKE_OPTIONS = foreign

AM_CXXFLAGS = \
  -I$(includedir) \
  -I$(OFFLINE_MAIN)/include

AM_FFLAGS = -fno-second-underscore

lib_LTLIBRARIES = libhijing.la libhijing_dummy.la

libhijing_la_SOURCES = \
  src/hijfst.cc \
  src/hijing.f \
  src/pyhii3au.f \
  src/pyhiinit.f \
  src/pyhiinki.f \
  src/pyhiinre.f \
  src/pyhiklim.f \
  src/pyhikmap.f \
  src/pyhimaxi.f \
  src/pyhimult.f \
  src/pyhiovly.f \
  src/pyhirand.f \
  src/pyhiremn.f \
  src/pyhiresd.f \
  src/pyhiscat.f \
  src/pyhisigh.f \
  src/pyhispen.f \
  src/pyhispli.f \
  src/pyhisspa.f \
  src/pyhistat.f \
  src/pyhistfu.f \
  src/pyhitest.f \
  src/pyhithia.f \
  src/pyhiw1au.f \
  src/pyhiw2au.f \
  src/pyhiwidt.f \
  src/pyhixtot.f \
  src/quench.f \
  src/rlu.f \
  src/rluget.f \
  src/rluset.f \
  src/romg.f \
  src/rwdsax.f \
  src/sgmin.f \
  src/subcrs1.f \
  src/subcrs2.f \
  src/subcrs3.f \
  src/subcrs4.f \
  src/subcrs5.f \
  src/subcrs6.f \
  src/subcrs7.f \
  src/title.f \
  src/ulalps.f \
  src/ulangl.f \
  src/ulmass.f \
  src/vegas.f \
  src/wdsax1.f \
  src/wdsax2.f \
  src/wdsax.f \
  src/ar3jet.f \
  src/aran9.f \
  src/arorie.f \
  src/atrobo.f \
  src/attflv.f \
  src/attrad.f \
  src/bk.f \
  src/crsjet.f \
  src/fgp1.f \
  src/fgp2.f \
  src/fgp3.f \
  src/fhin.f \
  src/fjet.f \
  src/fjetrig.f \
  src/flap1.f \
  src/flap2.f \
  src/flap.f \
  src/fnjet.f \
  src/fnkick2.f \
  src/fnkick.f \
  src/fnstru.f \
  src/fnstrum.f \
  src/fnstrus.f \
  src/ftot.f \
  src/ftotjet.f \
  src/ftotrig.f \
  src/gauss1.f \
  src/gauss2.f \
  src/gauss3.f \
  src/gauss4.f \
  src/g.f \
  src/ghvq.f \
  src/gmin.f \
  src/gmre.f \
  src/gphoton.f \
  src/hiboost.f \
  src/hidata.f \
  src/hifun.f \
  src/hijcrs.f \
  src/hijcsc.f \
  src/hijels.f \
  src/hijflv.f \
  src/hijfrg.f \
  src/hijhrd.f \
  src/hijini.f \
  src/hijset.f \
  src/hijsft.f \
  src/hijsrt.f \
  src/hijwds.f \
  src/hiptdi.f \
  src/hirnd2.f \
  src/hirnd.f \
  src/hirobo.f \
  src/jetini.f \
  src/klu.f \
  src/lu1ent.f \
  src/lu2ent.f \
  src/lu3ent.f \
  src/lu4ent.f \
  src/luboei.f \
  src/lucell.f \
  src/luchge.f \
  src/luclus.f \
  src/lucomp.f \
  src/ludata.f \
  src/ludecy.f \
  src/luedit.f \
  src/lueevt.f \
  src/luerrm.f \
  src/luexec.f \
  src/lufowo.f \
  src/lugive.f \
  src/luhepc.f \
  src/luindf.f \
  src/lujmas.f \
  src/lujoin.f \
  src/lukfdi.f \
  src/lulist.f \
  src/luname.f \
  src/luonia.f \
  src/luprep.f \
  src/luptdi.f \
  src/luradk.f \
  src/lurobo.f \
  src/lushow.f \
  src/lusphe.f \
  src/lustrf.f \
  src/lutabu.f \
  src/lutest.f \
  src/luthru.f \
  src/luupda.f \
  src/lux3jt.f \
  src/lux4jt.f \
  src/luxdif.f \
  src/luxjet.f \
  src/luxkfl.f \
  src/luxtot.f \
  src/luzdis.f \
  src/omg0.f \
  src/parton.f \
  src/plu.f \
  src/profile.f \
  src/pyhidata.f \
  src/pyhidiff.f \
  src/pyhifram.f \
  src/pyhigamm.f

libhijing_dummy_la_SOURCES = \
  dummy/pyhikcut.f \
  dummy/pyhistfe.f
